# rust-mcfg

./: .gitignore  Cargo.toml  README.md  index.html  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: gh-pages.yml
appendices/: log-schema.html  package-sets.html  yaml-schema.html
book/: book.toml
book/src/: SUMMARY.md
book/src/appendices/: log-schema.md  package-sets.md  yaml-schema.md
book/src/installers/: index.md  installing.md  scripts.md
book/src/introduction/: index.md  library.md  start-here.md  tool.md
book/src/package-sets/: index.md
book/src/repository/: index.md  (+3 more)
installers/: index.html  installing.html  scripts.html
introduction/: index.html  library.html  start-here.html  tool.html
package-sets/: index.html
repository/: index.html  package-set-groups.html  package-sets.html  packages.html
schema/: installers.json  package-set.json
scripts/: index.html  variables.html
src/: error.rs  lib.rs  reporter.rs
src/actions/: config.rs  default-installers.yml  history.rs  init.rs  install.rs  installers.rs  list.rs  macos-homebrew-services.yml  macos-homebrew.yml  manage.rs  mod.rs  paths.rs  refresh.rs  remove_self.rs  shell.rs  upgrade.rs
src/shared/: command.rs  counter.rs  editor.rs  env.rs  environment.rs  install_log.rs  installer.rs  mod.rs  packages.rs
tests/: brew-casks.txt  brew-formulae.txt  test_environment.rs  test_installer.rs  test_installer_registry.rs  test_name.rs  test_package_repository.rs  test_package_sets.rs
tool/: actions.html  existing.html  index.html  new.html
(+12 files in other folders)
