[package]
name = "mcfg"
description = "Machine configurator, a cross-platform meta-package manager."
version = "0.1.0"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/mcfg/"
repository = "https://github.com/johnstonskj/rust-mcfg.git"
license = "MIT"
readme = "README.md"
publish = true
default-run = "mcfg"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true

[[bin]]
name = "mcfg"
path = "src/bin/main.rs"
required-features = ["command-line"]

[features]
command-line = ["pretty_env_logger", "structopt"]

[dependencies]
dirs-next = "2.0.0"
error-chain = "0.12.2"
git2 = "0.13"
lazy_static = "1.4.0"
log = "0.4.11"
prettytable-rs = "0.8.0"
regex = "1.4.3"
rusqlite = { version = "0.24.2", features = ["time"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
time = "0.2.25"
xdirs = "0.1.0"

pretty_env_logger = { version = "0.4.0", optional = true  }
structopt = { version = "0.3.14", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
